fix: 优化商品系统 - 修复6个关键Bug并完善API
Bug修复:
- updateItem未设置ID导致更新永远失败 (ItemServiceImpl)
- ensureItemAttributes更新时丢失已有属性 (AttributeServiceImpl)
- processSkuAttributes更新时丢失已有SKU属性 (SkuServiceImpl)
- processSkuAttributes首次创建时skuId为NULL (SkuServiceImpl)
- ItemAccessLogServiceImpl线程泄漏和并发不安全
- ItemAttributeRequest的attributeValueId @NotNull阻止合法INPUT请求

API完善:
- ItemController补全POST/PUT/GET列表端点
- CreateItemRequest添加URL格式校验，与UpdateItemRequest一致
- UpdateItemRequest添加subImageUrls @Size(max=5)校验
- ItemResponse添加status和sortScore字段
- ItemResponseConverter补全status和sortScore映射

测试:
- 新增15个单元测试覆盖所有Bug修复和API变更
- 新建ItemAccessLogServiceImplTest和ItemResponseConverterTest